--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -25,6 +25,7 @@ body {
 .m-b-15 { margin-bottom: 15px !important; }
 .m-b-20 { margin-bottom: 20px !important; }
 .m-b-25 { margin-bottom: 25px !important; }
+.m-b-100 { margin-bottom: 100px !important; }
 
 .align-center { text-align: center; }
 
